# AlgRemez

./: CMakeLists.txt  README
src/: CMakeLists.txt  alg_remez.C  alg_remez.h  main.C
test/: CMakeLists.txt  main.C
